crates/oxc_css_parser/tests/error/scss/at-rule/forward/hide-empty-variable.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `<unknown>`
  ┌─ hide-empty-variable.scss:1:19
  │
1 │ @forward "a" hide $;
  │                   ^
